Add prompts for clear stack name annotations
pretty sure the agents won't do this by default, this should guide them to ensure its there.

--- a/priv/prompts/upgrade/addon.md.eex
+++ b/priv/prompts/upgrade/addon.md.eex
@@ -12,7 +12,7 @@ Here is the prompt we've been given about the component to upgrade:
 
 <%= @prompt %>
 
-<%= if byte_size(@upgrade.prompt) > 0 do %>
+<%= if is_binary(@upgrade.prompt) do %>
 We've also been given some high level guidance about this upgrade that could be helpful for you:
 
 <%= @upgrade.prompt %>
