--- a/priv/prompts/upgrade/infrastructure.md.eex
+++ b/priv/prompts/upgrade/infrastructure.md.eex
@@ -6,6 +6,7 @@ What you'll ultimately want to do is construct a prompt to invoke a full coding 
 2. Use the `stack_files` tool to list the files for the stack. This will help you craft a targeted prompt and infer the appropriate repository to update
 3. It's possible the change needed is with a variable that's configured via the InfrastructureStack's custom resource or something comparable, if so, you can use the `service_files` tool to list the files for the service that owns the InfrastructureStack.
 4. Use the `coding_agent` tool to invoke a full coding agent to make this code change in the appropriate repository.
+5. When you invoke the `coding_agent` tool, ensure to prompt the agent to add a `Plural Stack: {stack-name}` comment to the PR body.  This will auto-link the PR to the stack so terraform plans and other features are visible for a future reviewer.
 
 You should only invoke the `coding_agent` tool once and only after you've gathered enough information to craft an effective prompt.
 
@@ -13,7 +14,7 @@ Here is the prompt we've been given about the component to upgrade:
 
 <%= @prompt %>
 
-<%= if byte_size(@upgrade.prompt) > 0 do %>
+<%= if is_binary(@upgrade.prompt) do %>
 We've also been given some high level guidance about this upgrade that could be helpful for you:
 
 <%= @upgrade.prompt %>
