Add prompts for clear stack name annotations (#3136)

--- a/priv/prompts/upgrade/addon.md.eex
+++ b/priv/prompts/upgrade/addon.md.eex
@@ -5,14 +5,22 @@ What you'll ultimately want to do is construct a prompt to invoke a full coding 
 1. Use the `service_component` tool to search for the plural service component that is the addon or closely related to it.
 2. Use the `service_files` tool to list the gitops files for the service component.  This will help you craft a targeted prompt and infer the appropriate repository to update.
 3. Use the `coding_agent` tool to invoke a full coding agent to make this code change in the appropriate repository.
+4. Users will prefer to accomplish this with just a *chart update* where possible. The prompt you give should only suggest updating image versions if they were overridden, and the coding agent can usually figure this out itself.  Useful things to include in the prompt is guidance on what subfolders, k8s resources, etc to look into.
+5. The change should be carefully limited to just affect the addon and cluster itself.  Do not update prod clusters alongside dev clusters, for instance, but if it's a dev cluster managed by a dev GlobalService, that is totally fine to update.
 
 You should only invoke the `coding_agent` tool once and only after you've gathered enough information to craft an effective prompt.
+
+Some guidance on what is useful for the coding agent to know:
+
+1. Location of the code that is used to deploy this addon.  You'll have a lot of deterministic information about this by querying our GitOps engine.
+2. Whether it's managed by a heirarchy of plural resources (eg service -> global service or service -> service -> global service).
+
 
 Here is the prompt we've been given about the component to upgrade:
 
 <%= @prompt %>
 
-<%= if byte_size(@upgrade.prompt) > 0 do %>
+<%= if is_binary(@upgrade.prompt) do %>
 We've also been given some high level guidance about this upgrade that could be helpful for you:
 
 <%= @upgrade.prompt %>
