Fix upgrade template
Was using an unbound var

--- a/assets/src/components/cd/clusters/info-flyover/upgrades/upgrades-markdown.ejs
+++ b/assets/src/components/cd/clusters/info-flyover/upgrades/upgrades-markdown.ejs
@@ -57,7 +57,7 @@ These are the specific updates recommended for each add-on in the current cluste
 
 ## Component Updates
 
-The following is a breakdown of changes involved in the component updates to support the upgrade to Kubernetes v<%= nextKubeVersion %>.
+The following is a breakdown of changes involved in the component updates to support the upgrade to Kubernetes.
 
 <% for (let i = 0; i < addons.length; i++) {
   const addon = addons[i]
