enclose key and identity values in quotes in values.yaml.liquid

--- a/templates/values.yaml.liquid
+++ b/templates/values.yaml.liquid
@@ -26,10 +26,10 @@ secrets:
   plural_client_secret: {{ configuration.pluralClientSecret }}
   {% endif %}
   {% if configuration.key %}
-  key: {{ configuration.key }}
+  key: "{{ configuration.key }}"
   {% endif %}
   {% if configuration.identity %}
-  identity: {{ configuration.identity }}
+  identity: "{{ configuration.identity }}"
   {% endif %}
 
 extraSecretEnv:
