--- a/priv/prompts/upgrade/infrastructure.md.eex
+++ b/priv/prompts/upgrade/infrastructure.md.eex
@@ -1,12 +1,18 @@
 You're tasked with upgrading a kubernetes cluster and addressing any remaining upgrade insights for the cluster. This will almost certainly be managed via Terraform.
 
+If the resource is managed by a Plural Stack, it's important to understand the heirarchy of how this is normally configured.  It is usually a tree like:
+
+Stack (owned by) -> InfrastructureStack Custom Resource -> Plural Service (... -> Plural Service)
+
 What you'll ultimately want to do is construct a prompt to invoke a full coding agent like claude code to make this code change in the appropriate repository. To do this, here is your workflow:
 
 1. Use the `stack_search` tool to search for the stack that oversees the terraform for this cloud-managed addon.
 2. Use the `stack_files` tool to list the files for the stack. This will help you craft a targeted prompt and infer the appropriate repository to update
-3. It's possible the change needed is with a variable that's configured via the InfrastructureStack's custom resource or something comparable, if so, you can use the `service_files` tool to list the files for the service that owns the InfrastructureStack.
-4. Use the `coding_agent` tool to invoke a full coding agent to make this code change in the appropriate repository.
-5. When you invoke the `coding_agent` tool, ensure to prompt the agent to add a `Plural Stack: {stack-name}` comment to the PR body.  This will auto-link the PR to the stack so terraform plans and other features are visible for a future reviewer.
+3. It's possible the change needed is with a variable that's actually configured via the InfrastructureStack's custom resource or something comparable.
+4. To evaluate if the change actually needs to be made in the InfrastructureStack custom resource, you can use the `service_component` tool to search for the plural service that owns the InfrastructureStack and `service_files` to list the files for the service.
+5. You might also need to do that recursively, since services can own other services.
+6. Once you're satisfied, use the `coding_agent` tool to invoke a full coding agent to make this code change in the appropriate repository.
+7. When you invoke the `coding_agent` tool, ensure to prompt the agent to add a `Plural Stack: {stack-name}` comment to the PR body.  This will auto-link the PR to the stack so terraform plans and other features are visible for a future reviewer.
 
 You should only invoke the `coding_agent` tool once and only after you've gathered enough information to craft an effective prompt.
 
@@ -17,6 +23,18 @@ Some guidance on what is useful for the coding agent to know:
 3. The agent should be made aware of that heirarchy when planning changes, for instance if a ServiceDeployment is wiring in variables for an InfrastructureStack, a local terraform change will be overridden.
 4. If a variable is set in an InfrastructureStack custom resource, then updating terraform variable defaults will not be respected.  You must make a kubernetes yaml change instead.
 
+To determine the GitOps heirarchy for the stack associated with this infrastructure, a search plan something like this can be done:
+
+* use stack search to find the terraform stack associated with the cluster or resource you need to update
+* use stack files to list the files for the stack (this will usually give you an understanding of the repository and terraform folder)
+* use a service component search for the InfrastructureStack associated with the stack, this is needed to understand if variables are wired at the k8s layer.
+* use service files + service component searches to see how these are wired within k8s-layer GitOps.
+
+The cluster that is being upgraded is:
+
+Cluster Name: <%= @upgrade.cluster.name %>
+Cluster Distro: <%= @upgrade.cluster.distro %>
+Cluster Version: <%= @upgrade.cluster.current_version %>
 
 Here is the prompt we've been given about the component to upgrade:
 
